css/main.css
.transparent-text-white, .gallery .photo-frame figure figcaption {
  color: rgba(255, 255, 255, 0.65); }

/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0; }

/**
 * Basic styling
 */
body {
  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 300;
  color: #111;
  -webkit-text-size-adjust: 100%; }

/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
.highlight {
  margin-bottom: 15px; }

/**
 * Images
 */
img {
  max-width: 100%;
  height: auto;
  vertical-align: middle; }

/**
 * Figures
 */
figure > img {
  display: block; }

figcaption {
  font-size: 14px; }

/**
 * Lists
 */
ul, ol {
  margin-left: 30px; }

li > ul,
li > ol {
  margin-bottom: 0; }

/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
  font-weight: 300; }

/**
 * Links
 */
a {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: 0;
  position: relative;
  color: #828282; }
  a:visited {
    color: #828282; }
  a:hover {
    background-color: #828282;
    color: #fff;
    text-decoration: none;
    box-shadow: 2px 0px #828282, -2px 0px #828282, 0px 2px 0px 2px #828282, 0px 6px 9px -2px rgba(0, 0, 0, 0.7); }
  a.extern:hover {
    background-color: #4EB538;
    box-shadow: 2px 0px #4EB538, -2px 0px #4EB538, 0px 2px 0px 2px #4EB538, 0px 6px 9px -2px rgba(0, 0, 0, 0.7); }
    a.extern:hover:after {
      content: 'externe link';
      position: absolute;
      top: -16px;
      background: #4EB538;
      left: 5px;
      font-size: 11px;
      padding: 0px 3px;
      letter-spacing: 0.4px;
      width: 57px; }

/**
 * Blockquotes
 */
blockquote {
  color: #828282;
  border-left: 4px solid #e8e8e8;
  padding-left: 15px;
  font-size: 18px;
  letter-spacing: -1px;
  font-style: italic; }
  blockquote > :last-child {
    margin-bottom: 0; }

/**
 * Code formatting
 */
pre,
code {
  font-size: 15px;
  border: 1px solid #e8e8e8;
  border-radius: 3px;
  background-color: #eef; }

code {
  padding: 1px 5px; }

pre {
  padding: 8px 12px;
  overflow-x: scroll; }
  pre > code {
    border: 0;
    padding-right: 0;
    padding-left: 0; }

/**
 * Wrapper
 */
.wrapper {
  max-width: -webkit-calc(800px - (30px * 2));
  max-width: calc(800px - (30px * 2));
  margin-right: auto;
  margin-left: auto;
  padding-right: 30px;
  padding-left: 30px; }
  @media screen and (max-width: 800px) {
    .wrapper {
      max-width: -webkit-calc(800px - (30px));
      max-width: calc(800px - (30px));
      padding-right: 15px;
      padding-left: 15px; } }

/**
 * Clearfix
 */
.wrapper:after {
  content: "";
  display: table;
  clear: both; }

/**
 * Icons
 */
.icon > svg {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: middle; }
  .icon > svg path {
    fill: #828282; }

html, body {
  height: 100%; }

/**
 * Site header
 */
.site-header {
  border-bottom: 1px solid #e8e8e8;
  min-height: 56px;
  position: relative; }

.site-title {
  font-size: 26px;
  line-height: 56px;
  letter-spacing: -1px;
  margin-bottom: 0;
  float: left;
  text-decoration: none; }
  .site-title:hover {
    background-color: transparent;
    color: #828282;
    box-shadow: none; }

.site-nav {
  float: right;
  line-height: 56px; }
  .site-nav .menu-icon {
    display: none; }
  .site-nav .page-link {
    color: #111;
    line-height: 1.5; }
    .site-nav .page-link:not(:first-child) {
      margin-left: 5px; }
  .site-nav a:hover {
    background-color: transparent;
    color: #828282;
    box-shadow: none; }

/**
 * Page content
 */
.page-content {
  padding: 30px 0; }

.page-heading {
  font-size: 20px; }

.post-list {
  margin-left: 0;
  list-style: none; }
  .post-list li {
    margin-bottom: 20px; }
  .post-list .post-meta {
    display: block; }

.post-meta {
  font-size: 14px;
  color: #828282; }

.post-link {
  display: block;
  font-size: 24px; }

@media only screen and (min-width: 1150px) {
  .post-list {
    margin-left: 0;
    list-style: none; }
    .post-list li {
      margin-bottom: 0px; }
    .post-list .post-meta {
      display: inline-block;
      width: 120px; } }
/**
 * Posts
 */
.post-header {
  margin-bottom: 30px;
  text-align: center; }

.post-title {
  font-size: 42px;
  letter-spacing: -1px;
  line-height: 52px; }
  @media screen and (max-width: 800px) {
    .post-title {
      font-size: 36px; } }

.post-content {
  margin-bottom: 30px; }
  .post-content h2 {
    font-size: 32px; }
    @media screen and (max-width: 800px) {
      .post-content h2 {
        font-size: 28px; } }
  .post-content h3 {
    font-size: 26px; }
    @media screen and (max-width: 800px) {
      .post-content h3 {
        font-size: 22px; } }
  .post-content h4 {
    font-size: 20px; }
    @media screen and (max-width: 800px) {
      .post-content h4 {
        font-size: 18px; } }
  .post-content img {
    margin: 0 0 10px 0; }

/**
 * Photos
 */
.gallery .photo-frame {
  box-sizing: border-box;
  height: 90vh;
  padding: 50px 20px 50px;
  max-width: 100%;
  -webkit-transition: all 600ms ease-out; }
  .gallery .photo-frame figure {
    width: 740px;
    margin: 0px auto;
    height: 100%;
    position: relative;
    max-width: 65%;
    -webkit-transition: all 600ms ease-out; }
    .gallery .photo-frame figure img {
      margin: 0px auto 0;
      box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.4), 0px 1px 0px 0px rgba(255, 255, 255, 0.4), -1px 0px 0px 0px rgba(214, 210, 136, 0.4), 0px -1px 0px 0px rgba(214, 210, 136, 0.4), 0px 6px 9px 0px rgba(0, 0, 0, 0.5), 0px 20px 30px 7px rgba(0, 0, 0, 0.3); }
    .gallery .photo-frame figure figcaption {
      margin-top: 30px;
      min-height: 50px;
      text-align: center; }
/* ... */

